Refactor markdown-it plugin loading and logging
Refactor markdown-it plugin loading to handle errors gracefully and improve logging.

--- a/.github/workflows/md-to-pdf.yml
+++ b/.github/workflows/md-to-pdf.yml
@@ -38,9 +38,19 @@ jobs:
           const { mdToPdf } = require('md-to-pdf');
           const MarkdownIt = require('markdown-it');
           const hljs = require('highlight.js');
-          const mdFootnote = require('markdown-it-footnote');
-          const mdEmoji = require('markdown-it-emoji');
-
+          
+          // טעינה בטוחה של פלאגינים
+          let mdFootnote, mdEmoji;
+          try {
+            mdFootnote = require('markdown-it-footnote');
+            mdEmoji = require('markdown-it-emoji');
+          } catch {
+            console.warn('⚠️ markdown-it-footnote/emoji not loaded');
+            mdFootnote = () => (md) => md;
+            mdEmoji = () => (md) => md;
+          }
+          
+          // הגדרה של MarkdownIt
           const md = new MarkdownIt({
             html: true,
             linkify: true,
@@ -54,10 +64,13 @@ jobs:
               } catch {}
               return `<pre><code class="hljs">${code}</code></pre>`;
             }
-          }).use(mdFootnote).use(mdEmoji);
-
+          });
+          md.use(mdFootnote());
+          md.use(mdEmoji());
+          
+          // זיהוי עברית
           const isRTL = (s) => /[\u0590-\u05FF]/.test(s);
-
+          
           function wrapHtml(body, rtl) {
             const dir = rtl ? 'rtl' : 'ltr';
             return `<!doctype html>
@@ -74,7 +87,7 @@ jobs:
             <body><article class="markdown-body">${body}</article></body>
             </html>`;
           }
-
+          
           function* walk(dir) {
             for (const e of fs.readdirSync(dir, { withFileTypes: true })) {
               const f = path.join(dir, e.name);
@@ -83,25 +96,29 @@ jobs:
                 yield f;
             }
           }
-
+          
           (async () => {
             const root = path.resolve(__dirname, '../..');
             const files = [...walk(root)];
-            console.log('Found', files.length, 'markdown files');
-            let ok=0, fail=0;
+            console.log('📄 Found', files.length, 'markdown files');
+            let ok = 0, fail = 0;
+          
             const browser = await puppeteer.launch({
               headless: true,
-              args: ['--no-sandbox', '--disable-setuid-sandbox'],
+              args: ['--no-sandbox', '--disable-setuid-sandbox']
             });
+          
             for (const file of files) {
               try {
                 const mdText = fs.readFileSync(file, 'utf8');
                 const html = wrapHtml(md.render(mdText), isRTL(mdText));
                 const out = file.replace(/\.md$/, '.pdf');
+          
                 const res = await mdToPdf({ content: html }, {
                   launch_options: { args: ['--no-sandbox'], browser },
                   pdf_options: { format: 'A4', printBackground: true }
                 });
+          
                 if (res && res.pdf) {
                   fs.writeFileSync(out, res.pdf);
                   console.log('✅', out);
@@ -115,10 +132,12 @@ jobs:
                 fail++;
               }
             }
+          
             await browser.close();
-            console.log('OK:', ok, ' FAIL:', fail);
-            if (ok===0) process.exit(1);
+            console.log('✅ OK:', ok, ' ❌ FAIL:', fail);
+            if (ok === 0) process.exit(1);
           })();
+
           EOF
 
       - name: Run conversion under xvfb
